# api

./: .env  .env_template  .gitignore  .sqruff  AGENTS.md  Cargo.toml  Dockerfile  README.md  codecov.yml  fly.toml  test.db
.github/: dependabot.yml
.sqlx/: query-0285ae1b83dc1e2077b8aba979e1e12e5f6ee05f793aa07c0cdcd2fa6c427d71.json  query-132e5ebff9c90fb182db3a9c2b58742688ffa4c3f6e7f54592320d712de9836a.json  query-26e2e3e11091e1e933b3b775760cd71f13dd2491a84aada0778f9d8e9bca9754.json  query-27dae314be20163c45c7609fa3b7a64bfddb127c93053b5d6650f747747d1cd2.json  query-29e3146870472502983de47b2787897cebb6bbf8ed336435235fa43b0f99f257.json  query-4be9d1ddff52871d6c27fbb10b92eb5e02111680e99c9b2a3488a097d5d1cc56.json  query-4c712d8cd74dd0206eb9affd54811bfa24463cd13e0c0a2d9760a40169c21195.json  query-4d578b4a0bb8ce442b56145cc3a541905708cd6ec8b743e07a2091745e1fb11d.json  query-5c259dd5e81e90e21d2447c96731947b931fdfad6f1ac89da82167b1752bd208.json  query-60ef7b7f6f2f4645434bdff051a853375873cbbe900bfbcdc5f9bd5cf62a40c0.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json  query-8792b1c20399c4067ff6e669b8680c0db8c01b054b4b0f6cc30d1ec5fbf0560c.json  query-89f6e042ab13c0255b49fba6b52ca1cff4d3c86e14882e293c9f4482d399bb2c.json  query-8d7d3d509081e7dc3401fdb8a447ae2bd78deaa3efdfdc6ef01740aea8381f3d.json  query-8fc6a9188fbf862337e7ae1ca0c95f27f082c51e19d37c55ac6ffd19616da2ce.json  query-b88869060744532388c2da7795ee5d04df28bbf9343001f6d6f6e616d97cedad.json  query-bbaa83e8af91adc92c46aa1c617b8bb533b891a8268062659fe4a909c7b430d1.json  (+8 more)
scripts/: test.sh
(+61 files in other folders)
