[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
sqlx = {version = "0.9.0", features = ["sqlite", "runtime-tokio"]}
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util"]}

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
