[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.138.1"
sentry = "0.48.5"
serde = { version = "1", features = ["derive"] }
sqlx = {version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono"]}
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util"]}
minijinja = { version = "2", features = ["debug"] }
subtle = "2"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
